fix missing imports in cell

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Qt: Session management error: Could not open network socket\n"
+     ]
+    }
+   ],
    "source": [
     "from src.qgis_project_creator import Metadata, Settings, Project\n",
     "\n",
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,14 +135,14 @@
        "'Widget class, needs to be implemented.'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sqlalchemy.orm import declarative_base, Mapped\n",
     "from src.qgis_project_creator import Widget, mapped_column\n",
-    "\n",
     "\n",
     "Base = declarative_base()\n",
     "\n",
@@ -143,6 +151,7 @@
     "    __tablename__ = \"test\"\n",
     "\n",
     "    id: Mapped[int] = mapped_column(Widget(), primary_key=True)\n",
+    "\n",
     "\n",
     "Test.id.info[\"widget\"].name"
    ]
